<resources>

    <string name="preference_file_key">net.prsv.stimer.PREFERENCE_FILE_KEY</string>
    <string name="preferences">Preferences</string>

    <string name="app_name">Stylus Timer</string>

    <string name="menu_add_stylus">Add cartridge/stylus</string>
    <string name="menu_preferences">App preferences</string>

    <string name="welcome_message_1">Welcome to the Stylus Timer app!</string>
    <string name="welcome_message_2">Press Continue to download stylus profile data.</string>

    <string name="setup_error_1">Error</string>
    <string name="setup_error_2">There was an error. Restart the application and try again.</string>

    <string name="download_error">There was an error downloading data</string>

    <string name="setup_complete_1">Setup complete!</string>
    <string name="setup_complete_2">All done. Please restart the application.</string>

    <string name="add_cartridge">Press the + button to add a cartridge</string>


    <string name="button_add_side">+ side</string>
    <string name="button_add_lp">+ LP</string>
    <string name="button_add_custom">+ custom time</string>
    <string name="button_edit">Edit</string>
    <string name="button_continue">Continue</string>
    <string name="button_restart">Restart</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add_manually">Add manually</string>
    <string name="button_select_from_list">Select from list</string>
    <string name="button_reset_hours">Reset usage counter</string>
    <string name="button_set_custom_threshold">Set custom threshold</string>
    <string name="button_delete">Delete cartridge</string>
    <string name="button_return">Return to the main screen</string>
    <string name="button_save_preferences">Save preferences</string>

    <string name="tv_profile">Profile: %s</string>
    <string name="tv_vtf">VTF: %.2fg</string>
    <string name="tv_usage">Usage: %.2f/%d hrs</string>
    <string name="tv_props_usage">Usage: %.2f hours</string>
    <string name="tv_wear_template">(wear: %s)</string>
    <string name="tv_wear_low">low</string>
    <string name="tv_wear_medium">medium</string>
    <string name="tv_wear_high">high</string>
    <string name="tv_wear_replace">replace ASAP!</string>
    <string name="tv_add_from_list">Choose cartridge from the list and press OK to save your selection.</string>
    <string name="tv_cartridge_name">Cartridge name:</string>
    <string name="tv_stylus_profile">Stylus profile:</string>
    <string name="tv_tracking_force">Vertical tracking force (grams):</string>
    <string name="tv_custom_threshold">Custom threshold (hours). If not set to 0, this value would override the default threshold for the selected stylus profile:</string>
    <string name="tv_custom_length_explanation">Use the following options to override default values for side and LP length used by the app (21 and 42 minutes respectively). Set to 0 to return to default values.</string>
    <string name="tv_custom_side">Custom side length (in minutes):</string>
    <string name="tv_custom_lp">Custom LP length (in minutes):</string>

    <string name="et_cartridge_name">Enter cartridge name here</string>

    <string name="error_adding_cartridge">There was an error adding the cartridge</string>
    <string name="error_getting_profiles">There was an error getting profile data</string>
    <string name="error_name_empty">Cartridge name cannot be empty</string>

    <string name="enter_time_in_minutes">Enter custom time (in minutes)</string>
    <string name="add_new_cartridge_title">Add a new cartridge</string>
    <string name="add_new_cartridge_dialog_message">You can select a cartridge from our precompiled list of popular models, or add one manually.</string>
    <string name="edit_cartridge_title">Cartridge properties</string>


</resources>